# ansi-rust

./: Cargo.toml  LICENSE  README.md
src/: color.rs  effects.rs  main.rs  math.rs  sdl.rs  utils.rs
src/renderers/: mod.rs  sdl.rs  terminal.rs
