[package]
name = "ansi-rust"
version = "0.1.0"
authors = ["Joseph Sheedy <joseph.sheedy@gmail.com>"]

[dependencies]
termsize = "0.1"
image = "0.20.0"
num-complex = "*"
# sdl2 = "0.31"


[dependencies.sdl2]
git = "https://github.com/AngryLawyer/rust-sdl2"

# version = "0.32"
# default-features = false
# features = ["ttf","image","gfx","mixer"]