[package]
name = "ansi-rust"
version = "0.1.0"
authors = ["Joseph Sheedy <joseph.sheedy@gmail.com>"]

[dependencies]
termsize = "0.1"
image = "0.20.0"
num-complex = "*"

[dependencies.sdl2]
# git = "https://github.com/AngryLawyer/rust-sdl2"
version = "*"
# default-features = false
features = ["gfx"]